fix: hide information window nav on mobile view

--- a/client/src/styles/SubCategorySidebar.styles.css
+++ b/client/src/styles/SubCategorySidebar.styles.css
@@ -1,4 +1,11 @@
 .SubCategorySidebar {
+  display: none;
+}
+
+@media (min-width: 576px) {
+  .SubCategorySidebar {
+      display: block;
+  }
 }
 
 .SubCategorySidebar::-webkit-scrollbar {
